Set up some tests to help guide the structure.

--- a/trove/tests/example/trove.config
+++ b/trove/tests/example/trove.config
@@ -3,16 +3,23 @@ code_dir = ./tests/example
 data_dir = ./tests/data
 processed_data_dir = ${data_dir}
 figure_dir = ./tests/figures
+seed = 12345
 
 [SCRIPTS]
 # Code will be run in order from lowest to highest number
+# The prefix determines how the code will be handled.
 s001 = ${code_dir}/pre.py
 s002 = ${code_dir}/main.py
-s003 = ${code_dir}/post.py
+# nb003 = ${code_dir}/post.ipnb
 
 [PARAMETERS]
+n = 1000
+low = 0
+high = 1000
 
-    [identifier_A]
-    
+    [ID identifier_A]
+    power = 2
 
-    [this_is_also_an_identifier]
+    [ID this_is_also_an_identifier]
+    power = 3
+
